Support favoring optimistic updates for tiling (#648)
